# engin

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg-configuration.json  vcpkg.json
engin/: CMakeLists.txt  camera.cpp  camera.h  engine.cpp  engine.h  entity.cpp  entity.h  light.cpp  light.h  main.cpp  material.cpp  material.h  render_system.h  scene.cpp  scene.h  texture.cpp  texture.h  texture_sampler.cpp  texture_sampler.h  transform.cpp  transform.h  view.cpp  view.h
samples/: CMakeLists.txt
samples/desktop/: CMakeLists.txt
samples/desktop/triangle/: main.cpp
test/: CMakeLists.txt  engine_test.cpp  engine_test.h  engine_test_main.cpp
test/base/: CMakeLists.txt  test.cpp  test.h  window_test.cpp  window_test.h  window_test_cocoa.mm  window_test_win32.cpp
